syntax = "proto3";
package injective.oracle.v1beta1;

import "gogoproto/gogo.proto";
import "injective/oracle/v1beta1/oracle.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

option go_package = "github.com/InjectiveLabs/injective-core/injective-chain/modules/oracle/types";

// Msg defines the oracle Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // RelayProviderPrice defines a method for relaying a price for a
  // provider-based oracle
  rpc RelayProviderPrices(MsgRelayProviderPrices)
      returns (MsgRelayProviderPricesResponse);

  // RelayPriceFeedPrice defines a method for relaying a price for a price
  // feeder-based oracle
  rpc RelayPriceFeedPrice(MsgRelayPriceFeedPrice)
      returns (MsgRelayPriceFeedPriceResponse);

  // RelayCoinbaseMessages defines a method for relaying price messages from
  // Coinbase API
  rpc RelayCoinbaseMessages(MsgRelayCoinbaseMessages)
      returns (MsgRelayCoinbaseMessagesResponse);

  // RelayStorkMessage defines a method for relaying price message from
  // Stork API
  rpc RelayStorkMessage(MsgRelayStorkPrices)
      returns (MsgRelayStorkPricesResponse);

  // RelayPythPrices defines a method for relaying rates from the Pyth contract
  rpc RelayPythPrices(MsgRelayPythPrices) returns (MsgRelayPythPricesResponse);

  // RelayChainlinkPrices defines a method for relaying rates from Chainlink
  // Data Streams
  rpc RelayChainlinkPrices(MsgRelayChainlinkPrices)
      returns (MsgRelayChainlinkPricesResponse);

  //  UpdateParams enables updating oracle module's params via governance
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgRelayProviderPrice defines a SDK message for setting a price through the
// provider oracle.
message MsgRelayProviderPrices {
  option (amino.name) = "oracle/MsgRelayProviderPrices";
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  string provider = 2;
  repeated string symbols = 3;
  repeated string prices = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message MsgRelayProviderPricesResponse {}

// MsgRelayPriceFeedPrice defines a SDK message for setting a price through the
// pricefeed oracle.
message MsgRelayPriceFeedPrice {
  option (amino.name) = "oracle/MsgRelayPriceFeedPrice";
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;

  repeated string base = 2;
  repeated string quote = 3;

  // price defines the price of the oracle base and quote
  repeated string price = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

message MsgRelayPriceFeedPriceResponse {}

// MsgRelayCoinbaseMessages defines a SDK message for relaying price messages
// from Coinbase API.
message MsgRelayCoinbaseMessages {
  option (amino.name) = "oracle/MsgRelayCoinbaseMessages";
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;

  repeated bytes messages = 2;
  repeated bytes signatures = 3;
}

message MsgRelayCoinbaseMessagesResponse {}

// MsgRelayStorkPrices defines a SDK message for relaying price message
// from Stork API.
message MsgRelayStorkPrices {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  repeated AssetPair asset_pairs = 2;
}

message MsgRelayStorkPricesResponse {}

// MsgRelayPythPrices defines a SDK message for updating Pyth prices
message MsgRelayPythPrices {
  option (amino.name) = "oracle/MsgRelayPythPrices";
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  repeated PriceAttestation price_attestations = 2;
}

// MsgRelayPythPricesResponse defines the Msg/RelayPythPrices response type.
message MsgRelayPythPricesResponse {}

// MsgRelayChainlinkPrices defines a SDK message for updating Chainlink Data
// Streams prices
message MsgRelayChainlinkPrices {
  option (amino.name) = "oracle/MsgRelayChainlinkPrices";
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (cosmos.msg.v1.signer) = "sender";

  string sender = 1;
  repeated ChainlinkReport reports = 2;
}

// MsgRelayChainlinkPricesResponse defines the Msg/RelayChainlinkPrices response
// type.
message MsgRelayChainlinkPricesResponse {}

message MsgUpdateParams {
  option (amino.name) = "oracle/MsgUpdateParams";
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address of the governance account.
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // params defines the oracle parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [ (gogoproto.nullable) = false ];
}

message MsgUpdateParamsResponse {}