syntax = "proto3";
package injective.peggy.v1;

import "cosmos_proto/cosmos.proto";
import "injective/peggy/v1/attestation.proto";
// import "injective/peggy/v1/types.proto";

option go_package = "github.com/InjectiveLabs/injective-core/injective-chain/modules/peggy/types";

// OutgoingTxBatch represents a batch of transactions going from Peggy to ETH
message OutgoingTxBatch {
  option (cosmos_proto.implements_interface) =
      "injective.peggy.v1.EthereumSigned";

  uint64 batch_nonce = 1;
  uint64 batch_timeout = 2;
  repeated OutgoingTransferTx transactions = 3;
  string token_contract = 4;
  uint64 block = 5;
}

// OutgoingTransferTx represents an individual send from Peggy to ETH
message OutgoingTransferTx {
  uint64 id = 1;
  string sender = 2;
  string dest_address = 3;
  ERC20Token erc20_token = 4;
  ERC20Token erc20_fee = 5;
}
